[gd_scene load_steps=4 format=3 uid="uid://ccarurxvwuejx"]

[ext_resource type="Script" path="res://World/Dungeon.gd" id="1_6pqms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_us881"]
size = Vector2(2.6875, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls786"]

[node name="DungeonScene" type="Node2D"]
script = ExtResource("1_6pqms")

[node name="left_door" type="Area2D" parent="."]
position = Vector2(-56, 2.08165e-12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_door"]
position = Vector2(-1.375, -2.08165e-12)
shape = SubResource("RectangleShape2D_us881")

[node name="right_door" type="Area2D" parent="."]
position = Vector2(56, 2.08165e-12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_door"]
position = Vector2(1, -2.08165e-12)
shape = SubResource("RectangleShape2D_us881")

[node name="down_door" type="Area2D" parent="."]
position = Vector2(2.08165e-12, 72)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="down_door"]
position = Vector2(0.34375, -1.84041e-06)
shape = SubResource("RectangleShape2D_us881")

[node name="up_door" type="Area2D" parent="."]
position = Vector2(2.08165e-12, -72)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="up_door"]
position = Vector2(-3.75, 1.43498e-05)
shape = SubResource("RectangleShape2D_us881")

[node name="right_marker" type="Marker2D" parent="."]
position = Vector2(40, 2.08165e-12)

[node name="left_marker" type="Marker2D" parent="."]
position = Vector2(-40, 2.08165e-12)

[node name="up_marker" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="down_marker" type="Marker2D" parent="."]
position = Vector2(0, 47)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(69, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_ls786")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(0, -88)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("RectangleShape2D_ls786")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-70, -1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource("RectangleShape2D_ls786")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(0, 84)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource("RectangleShape2D_ls786")

[connection signal="body_entered" from="left_door" to="." method="_on_left_door_body_entered"]
[connection signal="body_entered" from="right_door" to="." method="_on_right_door_body_entered"]
[connection signal="body_entered" from="down_door" to="." method="_on_down_body_entered"]
[connection signal="body_entered" from="up_door" to="." method="_on_up_body_entered"]
